--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-native-screens": "2.0.0-beta.2",
     "react-native-searchable-dropdown": "1.1.1",
     "react-native-share": "^2.0.0",
+    "react-native-slider": "^0.11.0",
     "react-native-sms": "^1.9.0",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-sound": "^0.11.0",
