--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "art": "^0.10.3",
     "axios": "^0.19.0",
     "firebase": "^6.4.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.15",
     "mainam-react-native-activity-panel": "^3.0.2",
     "mainam-react-native-barcode": "^1.0.3",
@@ -63,6 +64,7 @@
     "react-native-calendars": "^1.209.0",
     "react-native-callkeep": "^3.0.13",
     "react-native-camera": "3.8.0",
+    "react-native-charts-wrapper": "^0.5.7",
     "react-native-code-push": "^5.6.1",
     "react-native-device-info": "^2.3.2",
     "react-native-dialogbox": "^0.6.10",
@@ -93,6 +95,7 @@
     "react-native-popup-menu": "^0.15.9",
     "react-native-print": "^0.6.0",
     "react-native-qrcode-svg": "^5.1.2",
+    "react-native-reanimated": "^1.13.0",
     "react-native-render-html": "^4.2.0",
     "react-native-screens": "2.0.0-beta.2",
     "react-native-searchable-dropdown": "1.1.1",
@@ -104,6 +107,7 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-svg": "^9.7.1",
     "react-native-swiper": "1.6.0-rc.3",
+    "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.0",
     "react-native-vector-icons": "6.6.0",
     "react-native-voip-push-notification": "^2.0.0",
@@ -122,7 +126,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
-    "@babel/runtime": "^7.5.5",
+    "@babel/runtime": "^7.11.2",
     "@react-native-community/cli": "^2.9.0",
     "@react-native-community/cli-platform-android": "^2.9.0",
     "@react-native-community/cli-platform-ios": "^2.9.0",
