--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-code-push": "^5.6.1",
     "react-native-device-info": "^2.3.2",
     "react-native-dialogbox": "^0.6.10",
+    "react-native-document-picker": "^3.5.4",
     "react-native-fbsdk": "1.1.2",
     "react-native-firebase": "^5.5.6",
     "react-native-flash-message": "^0.1.13",
@@ -112,7 +113,7 @@
     "react-native-vector-icons": "6.6.0",
     "react-native-voip-push-notification": "^2.0.0",
     "react-native-webrtc": "1.75.3",
-    "react-native-webview": "^6.9.0",
+    "react-native-webview": "^10.8.0",
     "react-native-wheel-picker-android": "^2.0.5",
     "react-navigation": "^3.11.1",
     "react-navigation-transitions": "^1.0.12",
@@ -120,7 +121,7 @@
     "redux": "^4.0.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.10.16",
+    "rn-fetch-blob": "^0.12.0",
     "rn-placeholder": "^3.0.1",
     "socket.io-client": "^2.3.0"
   },
