--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-code-push": "^5.6.1",
     "react-native-device-info": "^2.3.2",
     "react-native-dialogbox": "^0.6.10",
+    "react-native-document-picker": "^3.5.4",
     "react-native-fbsdk": "1.1.2",
     "react-native-firebase": "^5.5.6",
     "react-native-flash-message": "^0.1.13",
