--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -135,8 +135,8 @@ android {
         versionCode 94
         versionName "6.7"
         ndk {
-            // abiFilters "armeabi-v7a", "x86", "arm64-v8a"
-            abiFilters  "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a", "x86", "arm64-v8a"
+            // abiFilters  "armeabi-v7a", "arm64-v8a"
         }
         multiDexEnabled true        
         vectorDrawables.useSupportLibrary = true        
@@ -147,8 +147,8 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            // include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
-            include  "armeabi-v7a", "arm64-v8a"
+            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+            // include  "armeabi-v7a", "arm64-v8a"
             // include "arm64-v8a", "x86_64"
         }
     }
@@ -177,8 +177,8 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // https://developer.android.com/studio/build/configure-apk-splits.html
-            // def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
-            def versionCodes = ["armeabi-v7a":1, "arm64-v8a":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2, "arm64-v8a": 3, "x86_64": 4]
+            // def versionCodes = ["armeabi-v7a":1, "arm64-v8a":2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
