--- a/package.json
+++ b/package.json
@@ -136,7 +136,8 @@
     "eslint": "^6.2.0",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.56.0",
-    "react-test-renderer": "16.8.6"
+    "react-test-renderer": "16.8.6",
+    "reactotron-react-native": "^5.0.0"
   },
   "jest": {
     "preset": "react-native",
