--- a/ios/APP/Info.plist
+++ b/ios/APP/Info.plist
@@ -96,6 +96,7 @@
 		<string>fbauth2</string>
 		<string>fbshareextension</string>
 		<string>momo</string>
+		<string>fb</string>
 	</array>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
