--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "react-native-tab-view": "^2.15.1",
     "react-native-table-component": "^1.2.0",
     "react-native-vector-icons": "6.6.0",
+    "react-native-voice": "^0.3.0",
     "react-native-voip-push-notification": "^2.0.0",
     "react-native-webrtc": "1.75.3",
     "react-native-webview": "^6.9.0",
