--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
     "react-native-dialogbox": "^0.6.10",
     "react-native-document-picker": "^3.5.4",
     "react-native-fbsdk": "1.1.2",
+    "react-native-fingerprint-change": "^1.2.5",
+    "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-firebase": "^5.5.6",
     "react-native-flash-message": "^0.1.13",
     "react-native-fs": "^2.16.2",
