--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-dialogbox": "^0.6.10",
     "react-native-dialogflow": "^3.2.2",
     "react-native-document-picker": "^3.5.4",
+    "react-native-fast-image": "^8.3.2",
     "react-native-fbsdk": "1.1.2",
     "react-native-fingerprint-change": "^1.2.5",
     "react-native-fingerprint-scanner": "^6.0.0",
@@ -100,7 +101,7 @@
     "react-native-print": "^0.6.0",
     "react-native-qrcode-svg": "^5.1.2",
     "react-native-reanimated": "^1.13.0",
-    "react-native-render-html": "^4.2.0",
+    "react-native-render-html": "^4.2.3",
     "react-native-screens": "2.0.0-beta.2",
     "react-native-searchable-dropdown": "1.1.1",
     "react-native-share": "^2.0.0",
