--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,11 +132,11 @@ android {
         applicationId "com.isofh.appisofhcarestable"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 94
-        versionName "6.7"
+        versionCode 96
+        versionName "6.9"
         ndk {
-            abiFilters "armeabi-v7a", "x86", "arm64-v8a"
-            // abiFilters  "armeabi-v7a", "arm64-v8a"
+            // abiFilters "armeabi-v7a", "x86", "arm64-v8a"
+            abiFilters  "armeabi-v7a", "arm64-v8a"
         }
         multiDexEnabled true        
         vectorDrawables.useSupportLibrary = true        
@@ -147,8 +147,8 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
-            // include  "armeabi-v7a", "arm64-v8a"
+            // include "armeabi-v7a", "x86", "arm64-v8a", "x86_64"
+            include  "armeabi-v7a", "arm64-v8a"
             // include "arm64-v8a", "x86_64"
         }
     }
