--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -217,7 +217,9 @@ android {
 }
 
 dependencies {
-    implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+    implementation 'com.facebook.android:facebook-core:[4,5)'
+    implementation 'com.facebook.android:facebook-marketing:[4,5)' 
     compile(name: 'payoo-payment-sdk-release-2.2.0', ext: 'aar') { transitive = true }
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
