--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "react-native-get-location": "^1.2.0",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-google-places": "^3.1.2",
-    "react-native-html-to-pdf": "^0.8.0",
+    "react-native-html-to-pdf": "https://github.com/christopherdro/react-native-html-to-pdf.git",
     "react-native-image-crop-picker": "^0.25.0",
     "react-native-image-resizer": "^1.1.0",
     "react-native-image-viewing": "0.1.7",
