Cài đặt Event trên Google analytics

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -55,7 +55,7 @@ target 'APP' do
   pod 'Firebase', '~> 6.2.0'
   pod 'Firebase/Messaging', '~> 6.2.0'
   pod 'Firebase/Core', '~> 6.2.0'
-
+  pod 'GoogleIDFASupport', '~> 3.14.0'
   pod 'Facebook-iOS-SDK'
   # react-native-maps
   rn_maps_path = '../node_modules/react-native-maps'  
