--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-appstore-version-checker": "^3.0.0",
     "react-native-calendars": "^1.209.0",
-    "react-native-callkeep": "^3.0.13",
+    "react-native-callkeep": "3.0.13",
     "react-native-camera": "3.8.0",
     "react-native-charts-wrapper": "^0.5.7",
     "react-native-code-push": "^5.6.1",
@@ -75,6 +75,7 @@
     "react-native-fingerprint-change": "^1.2.5",
     "react-native-fingerprint-scanner": "^6.0.0",
     "react-native-firebase": "^5.5.6",
+    "react-native-fix-image": "^2.1.0",
     "react-native-flash-message": "^0.1.13",
     "react-native-fs": "^2.16.2",
     "react-native-gesture-handler": "^1.3.0",
