--- a/ios/APP/Info.plist
+++ b/ios/APP/Info.plist
@@ -118,6 +118,8 @@
 	<string>Cho phép iSofH Care truy cập thư viện nhạc của thiết bị này để lưu hoặc tải nhạc.</string>
 	<key>NSBluetoothPeripheralUsageDescription</key>
 	<string>Cho phép iSofH Care truy cập bluetooth của thiết bị này để kết nối với thiết bị khác.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Cho phép iSofH Care truy cập bluetooth của thiết bị này để kết nối với thiết bị khác.</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>Cho phép iSofH Care truy cập lịch của thiết bị này.</string>
 	<key>NSCameraUsageDescription</key>
