--- a/ios/APP/Info.plist
+++ b/ios/APP/Info.plist
@@ -44,6 +44,8 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>momocomu20200526</string>
+				<string>momohpoc20210312</string>
+				<string>momogit520200922</string>
 			</array>
 		</dict>
 		<dict>
