--- a/ios/APP/GoogleService-Info.plist
+++ b/ios/APP/GoogleService-Info.plist
@@ -15,7 +15,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.isofh.isofhcare</string>
+	<string>com.isofh.appisofhcaretest</string>
 	<key>PROJECT_ID</key>
 	<string>isofhcare</string>
 	<key>STORAGE_BUCKET</key>
